# dns-relay

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json.template  README.md  dnsrelay.txt  vcpkg-configuration.json  vcpkg.json
include/: args.h  cache.h  dns.h  dns_server.h  logger.h
src/: args.c  cache.c  dns.c  dns_server.c  logger.c  main.c
